# python_graphql_comparision

./: .pre-commit-config.yaml  README.md  manage.py  pyproject.toml  schema.graphql
python_graphql_comparision/: asgi.py  settings.py  urls.py  wsgi.py
python_graphql_comparison/: asgi.py  settings.py  urls.py  wsgi.py
python_graphql_comparison/apps/tasks/: apps.py  models.py
python_graphql_comparison/apps/tasks/migrations/: 0001_initial.py  0002_alter_commentactivity_options_and_more.py
python_graphql_comparison/apps/users/: apps.py  models.py
python_graphql_comparison/apps/users/migrations/: 0001_initial.py
python_graphql_comparison/apps/utils/: fields.py
python_graphql_comparison/graphql/ariadne/: connection.py  mutations.py  query.py  schema.py  types.py  utils.py
python_graphql_comparison/graphql/strawberry_django/: mutations.py  query.py  scalars.py  schema.py  types.py
python_graphql_comparison/tasks/: admin.py  apps.py  models.py
python_graphql_comparison/tasks/management/commands/: populate_db.py
python_graphql_comparison/tasks/migrations/: 0001_initial.py  0003_activity_task_alter_statuschangeactivity_new_status_and_more.py  0004_alter_activity_options_activity_polymorphic_ctype.py  0005_alter_task_assignee.py
python_graphql_comparison/users/: admin.py  apps.py  models.py
python_graphql_comparison/users/migrations/: 0001_initial.py
tasks/: admin.py  models.py
tasks/migrations/: 0001_initial.py  0002_alter_commentactivity_options_and_more.py
users/: admin.py  models.py
users/migrations/: 0001_initial.py
utils/: fields.py
